--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "yj"
-version = "0.5.0"
+version = "0.6.0"
 authors = ["Bruce Adams <bruce.adams@acm.org>"]
 edition = "2018"
+
+description = "Command line tool that converts YAML to JSON"
+license = "Apache-2.0"
+homepage = "https://github.com/bruceadams/yj"
+repository = "https://github.com/bruceadams/yj"
+
 
 [dependencies]
 failure = "0.1"
