Only release to crates.io once: linux

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ deploy:
   - provider: cargo
     on:
       repo: bruceadams/yj
+      os: linux
       rust: stable
       tags: true
     token:
