--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yj"
-version = "1.0.2"
+version = "1.1.0"
 authors = ["Bruce Adams <bruce.adams@acm.org>"]
 
 categories = ["command-line-utilities"]
@@ -16,9 +16,10 @@ repository = "https://github.com/bruceadams/yj"
 travis-ci = { repository = "bruceadams/yj" }
 
 [dependencies]
-failure = "0.1.6"
+exitfailure = "0.5.1"
 serde_json = "1.0.41"
 serde_yaml = "0.8.11"
+snafu = "0.5.0"
 
 [dependencies.structopt]
 features = ["wrap_help"]
