--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,15 +3,17 @@ name: Rust
 on: [push]
 
 jobs:
+  runs-on: ${{ matrix.os }}
+  strategy:
+    matrix:
+      os: [macos-latest, ubuntu-latest, windows-latest]
+
   build:
-
-    runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
-    - name: Build
-      run: cargo build --verbose
-    - name: Clippy
-      run: cargo clippy --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v1
+      - name: Build
+        run: cargo build --verbose
+      - name: Clippy
+        run: cargo clippy --verbose
+      - name: Run tests
+        run: cargo test --verbose
