--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,14 +8,9 @@ env:
   GITHUB_TOKEN: ${{ github.token }}
 
 jobs:
-  macos:
-    runs-on: macos-latest
-
+  release:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Build
-        run: cargo build --release --verbose
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1.0.0
@@ -24,16 +19,27 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
+
+  macos:
+    needs: release
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Build
+        run: cargo build --release --verbose
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1.0.1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ release.steps.create_release.outputs.upload_url }}
           asset_path: ./target/release/yj
           asset_name: yj.macos
           asset_content_type: application/octet-stream
 
   linux:
-    runs-on: linux-latest
+    needs: release
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
@@ -42,23 +48,16 @@ jobs:
         run: |
           rustup target add x86_64-unknown-linux-musl
           cargo build --release --target x86_64-unknown-linux-musl --verbose
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1.0.0
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1.0.1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ release.steps.create_release.outputs.upload_url }}
           asset_path: ./target/release/yj
           asset_name: yj.linux
           asset_content_type: application/octet-stream
 
   windows:
+    needs: release
     runs-on: windows-latest
 
     steps:
@@ -66,18 +65,10 @@ jobs:
         uses: actions/checkout@v1
       - name: Build
         run: cargo build --release --verbose
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1.0.0
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1.0.1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ release.steps.create_release.outputs.upload_url }}
           asset_path: ./target/release/yj.exe
           asset_name: yj.exe
           asset_content_type: application/octet-stream
