--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1.0.1
         with:
-          upload_url: ${{ get_release.outputs.upload_url }}
+          upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: ./target/release/yj
           asset_name: yj.macos
           asset_content_type: application/octet-stream
@@ -45,7 +45,7 @@ jobs:
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1.0.1
         with:
-          upload_url: ${{ get_release.outputs.upload_url }}
+          upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: ./target/release/yj
           asset_name: yj.linux
           asset_content_type: application/octet-stream
@@ -65,7 +65,7 @@ jobs:
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1.0.1
         with:
-          upload_url: ${{ get_release.outputs.upload_url }}
+          upload_url: ${{ steps.get_release.outputs.upload_url }}
           asset_path: ./target/release/yj.exe
           asset_name: yj.exe
           asset_content_type: application/octet-stream
