--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v1
       - name: Get Release
         id: get_release
-        uses: bruceadams/get-release@v1.1.0
+        uses: bruceadams/get-release@v1.2.0
       - name: Build
         run: cargo build --release --verbose
       - name: Upload Release Asset
@@ -35,9 +35,12 @@ jobs:
         uses: actions/checkout@v1
       - name: Get Release
         id: get_release
-        uses: bruceadams/get-release@v1.1.0
+        uses: bruceadams/get-release@v1.2.0
       - name: Build
-        run: cargo build --release --verbose
+        run: |
+          sudo apt-get install musl-tools
+          rustup target add x86_64-unknown-linux-musl
+          cargo build --release --target x86_64-unknown-linux-musl --verbose
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1.0.1
         with:
@@ -54,7 +57,7 @@ jobs:
         uses: actions/checkout@v1
       - name: Get Release
         id: get_release
-        uses: bruceadams/get-release@v1.1.0
+        uses: bruceadams/get-release@v1.2.0
       - name: Build
         run: cargo build --release --verbose
       - name: Upload Release Asset
