--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ travis-ci = { repository = "bruceadams/yj" }
 
 [dependencies]
 exitfailure = "0.5.1"
-serde_json = "1.0.56"
+serde_json = "1.0.57"
 serde_yaml = "0.8.13"
 snafu = "0.6.8"
 
-[dependencies.structopt]
+[dependencies.clap]
 features = ["wrap_help"]
-version = "0.3.15"
+git = "https://github.com/clap-rs/clap"
