--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,6 @@ serde_json = "1.0.56"
 serde_yaml = "0.8.13"
 snafu = "0.6.8"
 
-[dependencies.structopt]
+[dependencies.clap]
 features = ["wrap_help"]
-version = "0.3.15"
+git = "https://github.com/clap-rs/clap"
