--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,6 @@
 name = "yj"
 version = "1.1.25"
 authors = ["Bruce Adams <bruce.adams@acm.org>"]
-
 categories = ["command-line-utilities"]
 description = "Command line tool that converts YAML to JSON"
 edition = "2018"
@@ -16,11 +15,8 @@ repository = "https://github.com/bruceadams/yj"
 travis-ci = { repository = "bruceadams/yj" }
 
 [dependencies]
+clap = "3.0.0-beta.2"
 exitfailure = "0.5.1"
 serde_json = "1.0.59"
 serde_yaml = "0.8.13"
 snafu = "0.6.9"
-
-[dependencies.clap]
-features = ["wrap_help"]
-git = "https://github.com/clap-rs/clap"
