Use Rust beta to build macOS ARM binary

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,9 +47,10 @@ jobs:
       - name: macOS Build
         if: runner.os == 'macOS'
         run: |
-          rustup target add aarch64-apple-darwin
+          rustup target install beta
+          rustup target add --toolchain beta aarch64-apple-darwin
           cargo build --release --verbose
-          cargo build --release --target aarch64-apple-darwin --verbose
+          SDKROOT=$(xcrun -sdk macosx11.0 --show-sdk-path) MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx11.0 --show-sdk-platform-version) cargo +beta build --release --target aarch64-apple-darwin --verbose
       - name: Windows build
         if: runner.os == 'Windows'
         run: |
