--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
           rustup toolchain install beta
           rustup target add --toolchain beta aarch64-apple-darwin
           cargo build --release --verbose
-          SDKROOT=$(xcrun -sdk macosx11.0 --show-sdk-path) MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx11.0 --show-sdk-platform-version) cargo +beta build --release --target aarch64-apple-darwin --verbose
+          cargo +beta build --release --target aarch64-apple-darwin --verbose
       - name: Windows build
         if: runner.os == 'Windows'
         run: |
