--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,9 +13,9 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [macos-11.0, ubuntu-latest, windows-latest]
         include:
-          - os: macos-latest
+          - os: macos-11.0
             x86_64: ./target/release/yj
             aarch64: ./target/aarch64-apple-darwin/release/yj
             name: macos
