Try for Linux ARM libc binary

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,10 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Update
-        run: |
-          rustup update
-          rustup component add clippy
+      - name: Rustup
+        run: rustup component add clippy
       - name: Build
         run: cargo build --verbose
       - name: Clippy
