--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,11 @@ repository = "https://github.com/bruceadams/yj"
 travis-ci = { repository = "bruceadams/yj" }
 
 [dependencies]
-clap = "3.0.0-beta.2"
 exitfailure = "0.5.1"
 serde_json = "1.0.64"
 serde_yaml = "0.8.17"
 snafu = "0.6.10"
+
+[dependencies.clap]
+features = ["wrap_help"]
+version = "3.0.0-beta.2"
