--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -9,20 +9,13 @@ task:
     PATH: $CARGO_HOME/bin:${PATH}
   registry_cache:
     folder: $RUST_HOME
-    fingerprint_script: date
-    populate_script: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | HOME=$RUST_HOME sh -s -- -y --no-modify-path --target aarch64-apple-darwin --verbose
+    populate_script: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --no-modify-path --target aarch64-apple-darwin --verbose
   target_cache:
     folder: target
     fingerprint_script: cat Cargo.lock
   build_script:
-    - ls
-    - env
-    - pwd
-    - echo $PWD
-    - ls $HOME
-    - ls $RUST_HOME
-    - ls $CARGO_HOME
-    - ls $CARGO_HOME/bin
-    - echo $PATH
-    - cargo build --release --target aarch64-apple-darwin --verbose
+    - cargo build --verbose --release --target aarch64-apple-darwin
+    - cargo build --verbose --release --target x86_64-apple-darwin
+    - lipo -create -output yj target/{aarch64,x86_64}-apple-darwin/release/yj
+    - file yj
   before_cache_script: rm -rf $CARGO_HOME/registry/index
