More fun with build caching

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -9,7 +9,8 @@ task:
     PATH: $CARGO_HOME/bin:${PATH}
   registry_cache:
     folder: $RUST_HOME
-    fingerprint_script: echo epic1
+    reupload_on_changes: true
+    fingerprint_script: cat Cargo.lock
     populate_script: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --no-modify-path --target aarch64-apple-darwin --verbose
   target_cache:
     folder: target
