More better caching?

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -12,7 +12,7 @@ macos_universal_task:
     reupload_on_changes: true
     fingerprint_script: cat Cargo.toml
     populate_script: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --no-modify-path --target aarch64-apple-darwin --verbose
-  update_script: rustup update
+  update_script: rustup --verbose update
   target_cache:
     folder: target
     reupload_on_changes: true
