--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,14 +3,16 @@ macos_instance:
 
 macos_universal_task:
   env:
-    RUST_HOME: $HOME/rust
+    RUST_HOME: $HOME/macos
     CARGO_HOME: $RUST_HOME/cargo
     RUSTUP_HOME: $RUST_HOME/rustup
-    PATH: $CARGO_HOME/bin:${PATH}
+    PATH: $CARGO_HOME/bin:$PATH
   rust_cache:
     folder: $RUST_HOME
     reupload_on_changes: true
-    fingerprint_script: date +%Y
+    fingerprint_script:
+      - echo $CIRRUS_OS
+      - date +%Y
     populate_script: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --no-modify-path --target aarch64-apple-darwin --verbose
   update_script: rustup --verbose update
   target_cache:
@@ -20,6 +22,27 @@ macos_universal_task:
   build_script:
     - cargo build --verbose --release --target aarch64-apple-darwin
     - cargo build --verbose --release --target x86_64-apple-darwin
-    - lipo -create -output yj target/{aarch64,x86_64}-apple-darwin/release/yj
-    - file yj
+    - lipo -create -output yj.macos target/{aarch64,x86_64}-apple-darwin/release/yj
+    - file yj.macos
+  binary_artifacts:
+    path: yj.macos
+  before_cache_script: rm -f target/.rustc_info.json
+
+linux_x68_task:
+  container:
+    image: rust:latest
+  registry_cache:
+    folder: $CARGO_HOME/registry
+    reupload_on_changes: true
+    fingerprint_script: date +%Y
+  target_cache:
+    folder: target
+    reupload_on_changes: true
+    fingerprint_script: rustc --version
+  build_script:
+    - cargo build --verbose --release
+    - mv target/release/yj yj.linux
+    - file yj.linux
+  binary_artifacts:
+    path: yj.linux
   before_cache_script: rm -f target/.rustc_info.json
