--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -18,7 +18,9 @@ macos_universal_task:
   target_cache:
     folder: target
     reupload_on_changes: true
-    fingerprint_script: rustc --version
+    fingerprint_script:
+      - echo $CIRRUS_OS
+      - rustc --version
   build_script:
     - cargo build --verbose --release --target aarch64-apple-darwin
     - cargo build --verbose --release --target x86_64-apple-darwin
@@ -38,8 +40,12 @@ linux_x68_task:
   target_cache:
     folder: target
     reupload_on_changes: true
-    fingerprint_script: rustc --version
+    fingerprint_script:
+      - echo $CIRRUS_OS
+      - rustc --version
   setup_script:
+    - apt-get update
+    - apt-get --yes install musl-tools
     - rustup target add x86_64-unknown-linux-musl
   build_script:
     - cargo build --verbose --release --target x86_64-unknown-linux-musl
