--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -63,6 +63,9 @@ windows_x86_task:
     CARGO_HOME: $RUST_HOME\cargo
     RUSTUP_HOME: $RUST_HOME\rustup
     PATH: $CARGO_HOME\bin;$PATH
+  vs_cpp_script:
+    - curl -fSLo vs_buildtools.exe https://aka.ms/vs/16/release/vs_buildtools.exe
+    - vs_buildtools.exe --quiet --wait --norestart --nocache --installPath C:\BuildTools --add Microsoft.Component.MSBuild --add Microsoft.VisualStudio.Component.Windows10SDK.18362 --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64
   rust_cache:
     folder: $RUST_HOME
     reupload_on_changes: true
@@ -70,13 +73,10 @@ windows_x86_task:
       - echo %CIRRUS_OS%
       - date /t
     populate_script:
-      - curl -fSLo vs_buildtools.exe https://aka.ms/vs/16/release/vs_buildtools.exe
-      - vs_buildtools.exe --quiet --wait --norestart --nocache --installPath C:\BuildTools --add Microsoft.Component.MSBuild --add Microsoft.VisualStudio.Component.Windows10SDK.18362 --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64
       - curl -fSLo rustup-init.exe https://win.rustup.rs/x86_64
       - rustup-init.exe -y --verbose
       - del rustup-init.exe
   update_script:
-    - echo %CARGO_HOME%
     - rustup --verbose update
   target_cache:
     folder: target
@@ -86,7 +86,8 @@ windows_x86_task:
       - rustc --version
   build_script:
     - cargo build --verbose --release
-    - move target/release/yj.exe yj.x86_64.%CIRRUS_OS%.exe
+    - dir target\release
+    - move target\release\yj.exe yj.x86_64.%CIRRUS_OS%.exe
   binary_artifacts:
     path: yj.x86_64.%CIRRUS_OS%.exe
-  before_cache_script: del target/.rustc_info.json
+  before_cache_script: del target\.rustc_info.json
