--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,19 @@
 [package]
 name = "yj"
-version = "1.1.33"
+version = "1.1.34"
 authors = ["Bruce Adams <bruce.adams@acm.org>"]
 categories = ["command-line-utilities"]
 description = "Command line tool that converts YAML to JSON"
 edition = "2018"
 homepage = "https://github.com/bruceadams/yj"
-keywords = ["json", "yaml"]
+keywords = ["cli", "json", "yaml"]
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/bruceadams/yj"
 
-[badges]
-travis-ci = { repository = "bruceadams/yj" }
-
 [dependencies]
 exitfailure = "0.5.1"
-serde_json = "1.0.64"
+serde_json = "1.0.66"
 serde_yaml = "0.8.17"
 snafu = "0.6.10"
 
